make site better

--- a/ConsoleApp1/ConsoleApp1/site.html
+++ b/ConsoleApp1/ConsoleApp1/site.html
@@ -7,6 +7,7 @@
 
     <h1 class="big1">eden zabarsky</h1>
     <p class="bluebig">student in darski. class 10A.</p>
+    <h2>i live in akko</h2>
     <p class="drkblue">my hobbies: gaming, drawig, sleeping, going out, gym.</p>
     <img src="draw.jpg" width="300" height="300" title="drawing" />
     <img src="computer.jpg" width="300" height="300" title="gaming" />
@@ -26,7 +27,7 @@
         }
 
         body {
-            font-family: 'Bauhaus 93';
+            font-family: 'Bodoni Bk BT';
             text-align: center;
             background-color: blanchedalmond;
         }
