images from internet

--- a/ConsoleApp1/ConsoleApp1/site.html
+++ b/ConsoleApp1/ConsoleApp1/site.html
@@ -8,9 +8,14 @@
     <h1 class="big1">eden zabarsky</h1>
     <p class="bluebig">student in darski. class 10A.</p>
     <h2>i live in akko</h2>
-    <p class="drkblue">my hobbies: gaming, drawig, sleeping, going out, gym.</p>
-    <img src="draw.jpg" width="300" height="300" title="drawing" />
-    <img src="computer.jpg" width="300" height="300" title="gaming" />
+    <p class="drkblue">my hobbies: gaming, drawig, sleeping, going out, gym, playing.</p>
+    <img src="https://cdn.pixabay.com/photo/2024/06/12/20/11/art-8826329_1280.jpg" width="300" height="300" title="drawing" />
+    <img src="https://cdn.pixabay.com/photo/2014/11/13/15/23/minecraft-529459_1280.jpg" width="300" height="300" title="gaming" />
+    <p class="drkblue">a little about me: i have 2 cats and i really love them, cats are my favorite thing in the world.</p>
+    <p class="drkblue">i have two little twin sisters and they are in middle school right now.</p>
+    <p class="drkblue">i like to play on the ukulele which is a mini guitar and in the past i have played on the piano.</p>
+    <p class="drkblue">i really like going out ith friends and family, it makes me happy.</p>
+
     <style>
         p.drkblue {
             color: darkcyan;
